fix user jumping screen #17

--- a/assets/css/comments.scss
+++ b/assets/css/comments.scss
@@ -388,6 +388,9 @@ body {
         &__date {
           color: $semi-hidden-color;
           font-size: $font-size - 2;
+          min-height: 17px;
+          line-height: 17px;
+          display: block;
         }
       }
 
